# disparity-cpu

./: .gitignore  CMakeLists.txt  Pixels.hpp  README.txt  disparity_cpu_dox_config  main.cpp
inc/: CliOptions.hpp  Disparity.hpp  Float8.hpp  PixelCalc.hpp  Pixels.hpp
incl/: CliOptions.hpp  Disparity.hpp  Logger.hpp  PixelUtils.hpp  Pixels.hpp
logs/: log_0316_1624.txt  log_0316_1957.txt  log_0316_2016_avx.txt  log_0422_1432.txt  log_0422_1434.txt  log_0422_1507.txt  log_0422_1508.txt
src/: CliOptions.cpp  Disparity.cpp  Logger.cpp  PixelCalc.cpp  PixelUtils.cpp  main.cpp
